add top5score files
